--- a/config/database.yml
+++ b/config/database.yml
@@ -25,3 +25,12 @@ production:
   host: localhost
   username: beeker
   #password: beeker
+
+staging:
+  adapter: postgresql
+  encoding: unicode
+  database: gameplan_staging
+  pool: 5
+  host: localhost
+  username: postgres
+  #password: beeker
